integration_tests/codegen_fail/fail/interface/struct/derive_cyclic_impl.stderr
error[E0391]: cycle detected when expanding type alias `Node1Value`
  --> fail/interface/struct/derive_cyclic_impl.rs:4:49
   |
4  | #[graphql(impl = Node1Value, for = [Node2Value, Node3Value])]
   |                                                 ^^^^^^^^^^
   |
note: ...which requires expanding type alias `Node3Value`...
  --> fail/interface/struct/derive_cyclic_impl.rs:16:50
   |
16 | #[graphql(impl = [Node1Value, Node2Value], for = Node1Value)]
   |                                                  ^^^^^^^^^^
   = note: ...which again requires expanding type alias `Node1Value`, completing the cycle
   = note: type aliases cannot be recursive
   = help: consider using a struct, enum, or union instead to break the cycle
   = help: see <https://doc.rust-lang.org/reference/types.html#recursive-types> for more information
note: cycle used when collecting item types in top-level module
  --> fail/interface/struct/derive_cyclic_impl.rs:1:1
   |
1  | / use juniper::GraphQLInterface;
2  | |
3  | | #[derive(GraphQLInterface)]
4  | | #[graphql(impl = Node1Value, for = [Node2Value, Node3Value])]
...  |
20 | |
21 | | fn main() {}
   | |____________^
